--- a/Unsupervised learning/PCA.ipynb
+++ b/Unsupervised learning/PCA.ipynb
@@ -9,32 +9,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
-    "\n",
-    "# Set up the Kaggle API client\n",
-    "api = KaggleApi()\n",
-    "api.authenticate()\n",
-    "\n",
-    "# Download the dataset\n",
-    "dataset = 'paulbrabban/daily-minimum-temperatures-in-melbourne'\n",
-    "api.dataset_download_files(dataset, path='.', unzip=True)\n",
-    "\n",
-    "file_path = r'C:\\Users\\Ankit\\Documents\\Vedanshi\\IISERB-ML-DL-course\\answers\\daily-minimum-temperatures-in-me.csv'\n",
-    "df = pd.read_csv(file_path, header=0, on_bad_lines='skip', names=['Date','min_temp'])\n",
-    "df['Date'] = pd.to_datetime(df['Date'])\n",
-    "df['min_temp'] = pd.to_numeric(df['min_temp'], errors='coerce') \n",
-    "df.head()"
+    "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making the function or class for performig the pca from scratch\n",
+    "class PCA_linear:\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "    #defining the function for Wi's\n",
+    "    def Wi(self):\n",
+    "        #making the data zero mean\n",
+    "        self.x-=np.mean(self.x,axis=0)\n",
+    "        a=self.x.T@self.x\n",
+    "        #finding the eigen values and eigen vectors\n",
+    "        values,vectors=np.linalg.eig(a)\n",
+    "        alphas=vectors/np.sqrt(values)\n",
+    "        return self.x@alphas\n",
+    "    def components(self):\n",
+    "        self.x=(self.x.T@self.Wi())@self.Wi()\n",
+    "        return self.x\n",
+    "    def retention(self):\n",
+    "        return (np.sum(np.diag(self.components()))/np.sum(np.diag(self.x)))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
