--- a/TDS_notes/LLMs for fun/LLM.ipynb
+++ b/TDS_notes/LLMs for fun/LLM.ipynb
@@ -21,9 +21,9 @@
     {
      "data": {
       "text/plain": [
-       "{'id': 'chatcmpl-9k4YpH2rk6Dh4ySyCHuE7c0Gk3oVG',\n",
+       "{'id': 'chatcmpl-9kcSl7k81oeyGwqtVyurls5I1aZYC',\n",
        " 'object': 'chat.completion',\n",
-       " 'created': 1720767647,\n",
+       " 'created': 1720897967,\n",
        " 'model': 'gpt-3.5-turbo-0125',\n",
        " 'choices': [{'index': 0,\n",
        "   'message': {'role': 'assistant', 'content': '2 + 2 equals 4.'},\n",
@@ -31,9 +31,9 @@
        "   'finish_reason': 'stop'}],\n",
        " 'usage': {'prompt_tokens': 14, 'completion_tokens': 8, 'total_tokens': 22},\n",
        " 'system_fingerprint': None,\n",
-       " 'monthlyCost': 0.000264,\n",
+       " 'monthlyCost': 0.00035404,\n",
        " 'cost': 9e-05,\n",
-       " 'monthlyRequests': 3}"
+       " 'monthlyRequests': 14}"
       ]
      },
      "execution_count": 2,
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2115,12 +2115,12 @@
        "    ...]}],\n",
        " 'model': 'text-embedding-3-small',\n",
        " 'usage': {'prompt_tokens': 2, 'total_tokens': 2},\n",
-       " 'monthlyCost': 0.00026404,\n",
+       " 'monthlyCost': 0.00035408,\n",
        " 'cost': 4e-08,\n",
-       " 'monthlyRequests': 7}"
+       " 'monthlyRequests': 15}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2144,16 +2144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['object', 'data', 'monthlyCost', 'cost', 'monthlyRequests'])"
+       "dict_keys(['object', 'data'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2228,160 +2228,209 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>gpt-4-1106-vision-preview</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2024-03-26 17:10:33</td>\n",
+       "      <td>system</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>gpt-3.5-turbo-0125</td>\n",
        "      <td>model</td>\n",
        "      <td>2024-01-23 22:19:18</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>gpt-4-turbo-preview</td>\n",
        "      <td>model</td>\n",
        "      <td>2024-01-23 19:22:57</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>gpt-4-0125-preview</td>\n",
        "      <td>model</td>\n",
        "      <td>2024-01-23 19:20:12</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>text-embedding-3-large</td>\n",
        "      <td>model</td>\n",
        "      <td>2024-01-22 19:53:00</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>text-embedding-3-small</td>\n",
        "      <td>model</td>\n",
        "      <td>2024-01-22 18:43:17</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>tts-1-hd-1106</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-11-03 23:18:53</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>tts-1-1106</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-11-03 23:14:01</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>12</th>\n",
        "      <td>tts-1-hd</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-11-03 21:13:35</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>gpt-3.5-turbo-1106</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-11-02 21:15:48</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>gpt-4-1106-preview</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-11-02 20:33:26</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <td>gpt-4-vision-preview</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2023-11-02 03:15:17</td>\n",
+       "      <td>system</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
        "      <td>dall-e-2</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-11-01 00:22:57</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>17</th>\n",
        "      <td>dall-e-3</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-10-31 20:46:29</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>18</th>\n",
        "      <td>gpt-3.5-turbo-instruct-0914</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-09-07 21:34:32</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>19</th>\n",
        "      <td>gpt-3.5-turbo-instruct</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-08-24 18:23:47</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>20</th>\n",
        "      <td>babbage-002</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-08-21 16:16:55</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>21</th>\n",
        "      <td>davinci-002</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-08-21 16:11:41</td>\n",
        "      <td>system</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>22</th>\n",
+       "      <td>gpt-4-32k-0314</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2023-06-28 19:08:41</td>\n",
+       "      <td>openai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
        "      <td>gpt-4</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-06-27 16:13:31</td>\n",
        "      <td>openai</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>24</th>\n",
+       "      <td>gpt-4-0314</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2023-06-27 16:13:30</td>\n",
+       "      <td>openai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
        "      <td>gpt-4-0613</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-06-12 16:54:56</td>\n",
        "      <td>openai</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>26</th>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2023-06-12 16:30:34</td>\n",
+       "      <td>openai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>gpt-3.5-turbo-16k-0613</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2023-05-30 19:17:27</td>\n",
+       "      <td>openai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
        "      <td>gpt-3.5-turbo-16k</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-05-10 22:35:02</td>\n",
        "      <td>openai-internal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>29</th>\n",
        "      <td>tts-1</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-04-19 21:49:11</td>\n",
        "      <td>openai-internal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>30</th>\n",
+       "      <td>gpt-3.5-turbo-0301</td>\n",
+       "      <td>model</td>\n",
+       "      <td>2023-03-01 05:52:43</td>\n",
+       "      <td>openai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
        "      <td>gpt-3.5-turbo</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-02-28 18:56:42</td>\n",
        "      <td>openai</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>32</th>\n",
        "      <td>whisper-1</td>\n",
        "      <td>model</td>\n",
        "      <td>2023-02-27 21:13:04</td>\n",
        "      <td>openai-internal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>33</th>\n",
        "      <td>text-embedding-ada-002</td>\n",
        "      <td>model</td>\n",
        "      <td>2022-12-16 19:01:39</td>\n",
@@ -2397,32 +2446,39 @@
        "1                        gpt-4o  model 2024-05-10 18:50:49           system\n",
        "2        gpt-4-turbo-2024-04-09  model 2024-04-08 18:41:17           system\n",
        "3                   gpt-4-turbo  model 2024-04-05 23:57:21           system\n",
-       "4            gpt-3.5-turbo-0125  model 2024-01-23 22:19:18           system\n",
-       "5           gpt-4-turbo-preview  model 2024-01-23 19:22:57           system\n",
-       "6            gpt-4-0125-preview  model 2024-01-23 19:20:12           system\n",
-       "7        text-embedding-3-large  model 2024-01-22 19:53:00           system\n",
-       "8        text-embedding-3-small  model 2024-01-22 18:43:17           system\n",
-       "9                 tts-1-hd-1106  model 2023-11-03 23:18:53           system\n",
-       "10                   tts-1-1106  model 2023-11-03 23:14:01           system\n",
-       "11                     tts-1-hd  model 2023-11-03 21:13:35           system\n",
-       "12           gpt-3.5-turbo-1106  model 2023-11-02 21:15:48           system\n",
-       "13           gpt-4-1106-preview  model 2023-11-02 20:33:26           system\n",
-       "14                     dall-e-2  model 2023-11-01 00:22:57           system\n",
-       "15                     dall-e-3  model 2023-10-31 20:46:29           system\n",
-       "16  gpt-3.5-turbo-instruct-0914  model 2023-09-07 21:34:32           system\n",
-       "17       gpt-3.5-turbo-instruct  model 2023-08-24 18:23:47           system\n",
-       "18                  babbage-002  model 2023-08-21 16:16:55           system\n",
-       "19                  davinci-002  model 2023-08-21 16:11:41           system\n",
-       "20                        gpt-4  model 2023-06-27 16:13:31           openai\n",
-       "21                   gpt-4-0613  model 2023-06-12 16:54:56           openai\n",
-       "22            gpt-3.5-turbo-16k  model 2023-05-10 22:35:02  openai-internal\n",
-       "23                        tts-1  model 2023-04-19 21:49:11  openai-internal\n",
-       "24                gpt-3.5-turbo  model 2023-02-28 18:56:42           openai\n",
-       "25                    whisper-1  model 2023-02-27 21:13:04  openai-internal\n",
-       "26       text-embedding-ada-002  model 2022-12-16 19:01:39  openai-internal"
+       "4     gpt-4-1106-vision-preview  model 2024-03-26 17:10:33           system\n",
+       "5            gpt-3.5-turbo-0125  model 2024-01-23 22:19:18           system\n",
+       "6           gpt-4-turbo-preview  model 2024-01-23 19:22:57           system\n",
+       "7            gpt-4-0125-preview  model 2024-01-23 19:20:12           system\n",
+       "8        text-embedding-3-large  model 2024-01-22 19:53:00           system\n",
+       "9        text-embedding-3-small  model 2024-01-22 18:43:17           system\n",
+       "10                tts-1-hd-1106  model 2023-11-03 23:18:53           system\n",
+       "11                   tts-1-1106  model 2023-11-03 23:14:01           system\n",
+       "12                     tts-1-hd  model 2023-11-03 21:13:35           system\n",
+       "13           gpt-3.5-turbo-1106  model 2023-11-02 21:15:48           system\n",
+       "14           gpt-4-1106-preview  model 2023-11-02 20:33:26           system\n",
+       "15         gpt-4-vision-preview  model 2023-11-02 03:15:17           system\n",
+       "16                     dall-e-2  model 2023-11-01 00:22:57           system\n",
+       "17                     dall-e-3  model 2023-10-31 20:46:29           system\n",
+       "18  gpt-3.5-turbo-instruct-0914  model 2023-09-07 21:34:32           system\n",
+       "19       gpt-3.5-turbo-instruct  model 2023-08-24 18:23:47           system\n",
+       "20                  babbage-002  model 2023-08-21 16:16:55           system\n",
+       "21                  davinci-002  model 2023-08-21 16:11:41           system\n",
+       "22               gpt-4-32k-0314  model 2023-06-28 19:08:41           openai\n",
+       "23                        gpt-4  model 2023-06-27 16:13:31           openai\n",
+       "24                   gpt-4-0314  model 2023-06-27 16:13:30           openai\n",
+       "25                   gpt-4-0613  model 2023-06-12 16:54:56           openai\n",
+       "26           gpt-3.5-turbo-0613  model 2023-06-12 16:30:34           openai\n",
+       "27       gpt-3.5-turbo-16k-0613  model 2023-05-30 19:17:27           openai\n",
+       "28            gpt-3.5-turbo-16k  model 2023-05-10 22:35:02  openai-internal\n",
+       "29                        tts-1  model 2023-04-19 21:49:11  openai-internal\n",
+       "30           gpt-3.5-turbo-0301  model 2023-03-01 05:52:43           openai\n",
+       "31                gpt-3.5-turbo  model 2023-02-28 18:56:42           openai\n",
+       "32                    whisper-1  model 2023-02-27 21:13:04  openai-internal\n",
+       "33       text-embedding-ada-002  model 2022-12-16 19:01:39  openai-internal"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2438,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2516,45 @@
     "    result = response.json()\n",
     "    #make a seprate list of answers and then append it to the df if results is your original dataframe.\n",
     "    answer = result[\"choices\"][0][\"message\"][\"content\"]\n",
-    "    return answer\n"
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LLM extraction.\n",
+    "def get_address(address):\n",
+    "    url = \"https://api.openai.com/v1/chat/completions\"\n",
+    "    headers = {\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Authorization\": f\"Bearer {api_key}\"\n",
+    "    }\n",
+    "    data = {\n",
+    "        \"model\": \"gpt-3.5-turbo\",\n",
+    "        \"response_format\": { \"type\": \"json_object\" },\n",
+    "        \"messages\": [\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"\"\"\n",
+    "Extract the state name, ZIP code and country as JSON.\n",
+    "Use {\"state_name\": ..., \"zip_code\": ..., \"country\": 3-letter country code}\n",
+    "\"\"\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": address\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    response = requests.post(url, headers=headers, json=data)\n",
+    "    result = response.json()\n",
+    "    return json.loads(result[\"choices\"][0][\"message\"][\"content\"])\n",
+    "\n",
+    "#get_address(addresses[0]['address'])"
    ]
   },
   {
