api token expired

--- a/TDS_notes/LLMs for fun/LLM.ipynb
+++ b/TDS_notes/LLMs for fun/LLM.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ## use the api doc provided, it'll make the work easier."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,20 +17,21 @@
     "import json\n",
     "import bs4\n",
     "import api_key\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 'chatcmpl-9kcSl7k81oeyGwqtVyurls5I1aZYC',\n",
+       "{'id': 'chatcmpl-9ktp7cZHxk6XS6QPPqPa7mFjd7bcm',\n",
        " 'object': 'chat.completion',\n",
-       " 'created': 1720897967,\n",
+       " 'created': 1720964701,\n",
        " 'model': 'gpt-3.5-turbo-0125',\n",
        " 'choices': [{'index': 0,\n",
        "   'message': {'role': 'assistant', 'content': '2 + 2 equals 4.'},\n",
@@ -31,12 +39,12 @@
        "   'finish_reason': 'stop'}],\n",
        " 'usage': {'prompt_tokens': 14, 'completion_tokens': 8, 'total_tokens': 22},\n",
        " 'system_fingerprint': None,\n",
-       " 'monthlyCost': 0.00035404,\n",
+       " 'monthlyCost': 0.00044408,\n",
        " 'cost': 9e-05,\n",
-       " 'monthlyRequests': 14}"
+       " 'monthlyRequests': 16}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +94,7 @@
        "\"One of the other reviewers has mentioned that after watching just 1 Oz episode you'll be hooked. They are right, as this is exactly what happened with me.<br /><br />The first thing that struck me about Oz was its brutality and unflinching scenes of violence, which set in right from the word GO. Trust me, this is not a show for the faint hearted or timid. This show pulls no punches with regards to drugs, sex or violence. Its is hardcore, in the classic use of the word.<br /><br />It is called OZ as that is the nickname given to the Oswald Maximum Security State Penitentary. It focuses mainly on Emerald City, an experimental section of the prison where all the cells have glass fronts and face inwards, so privacy is not high on the agenda. Em City is home to many..Aryans, Muslims, gangstas, Latinos, Christians, Italians, Irish and more....so scuffles, death stares, dodgy dealings and shady agreements are never far away.<br /><br />I would say the main appeal of the show is due to the fact that it goes where other shows wouldn't dare. Forget pretty pictures painted for mainstream audiences, forget charm, forget romance...OZ doesn't mess around. The first episode I ever saw struck me as so nasty it was surreal, I couldn't say I was ready for it, but as I watched more, I developed a taste for Oz, and got accustomed to the high levels of graphic violence. Not just violence, but injustice (crooked guards who'll be sold out for a nickel, inmates who'll kill on order and get away with it, well mannered, middle class inmates being turned into prison bitches due to their lack of street skills or prison experience) Watching Oz, you may become comfortable with what is uncomfortable viewing....thats if you can get in touch with your darker side.\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2115,12 +2123,12 @@
        "    ...]}],\n",
        " 'model': 'text-embedding-3-small',\n",
        " 'usage': {'prompt_tokens': 2, 'total_tokens': 2},\n",
-       " 'monthlyCost': 0.00035408,\n",
+       " 'monthlyCost': 0.00044412,\n",
        " 'cost': 4e-08,\n",
-       " 'monthlyRequests': 15}"
+       " 'monthlyRequests': 17}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2144,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2161,7 @@
        "dict_keys(['object', 'data'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2486,7 @@
        "33       text-embedding-ada-002  model 2022-12-16 19:01:39  openai-internal"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2494,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2521,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,8 +2547,9 @@
     "            {\n",
     "                \"role\": \"system\",\n",
     "                \"content\": \"\"\"\n",
-    "Extract the state name, ZIP code and country as JSON.\n",
-    "Use {\"state_name\": ..., \"zip_code\": ..., \"country\": 3-letter country code}\n",
+    "\"Please convert the following attendee information into a JSON array of objects with the specified fields: fn, bday, email, tel, adr.country-name, org, title, photo, url, nickname. Note that adr is an object with country-name as a key. The format should be consistent with the provided JSON schema. the information is given below:\"\n",
+    "\n",
+    "}\n",
     "\"\"\"\n",
     "            },\n",
     "            {\n",
@@ -2552,17 +2561,137 @@
     "\n",
     "    response = requests.post(url, headers=headers, json=data)\n",
     "    result = response.json()\n",
-    "    return json.loads(result[\"choices\"][0][\"message\"][\"content\"])\n",
+    "    print(result.keys())\n",
+    "    return result\n",
+    "    #return json.loads(result[\"choices\"][0][\"message\"][\"content\"])\n",
     "\n",
     "#get_address(addresses[0]['address'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['error'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'message': \"Incorrect API key provided: <module *****************************************************************************************************************************************************************************py'>. You can find your API key at https://platform.openai.com/account/api-keys.\",\n",
+       "  'type': 'invalid_request_error',\n",
+       "  'param': None,\n",
+       "  'code': 'invalid_api_key'}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_address('''Joshua Hall - Tech Innovators. Website: https://techinnovators.com/joshh, Nickname: Josh.\n",
+    "Olivia Clark - UK. Nickname: Liv.\n",
+    "David Miller - Consultant. Nickname: Dave.\n",
+    "Natalie King - Future Tech, USA. Nickname: Nat.\n",
+    "Grace Thompson - Phone: 555-777-8888. Birthday: August 23, 1982.\n",
+    "Joshua Ward - Australia. Nickname: Josh.\n",
+    "Michael Harris - Project Manager at Future Tech, Canada. Nickname: Mike.\n",
+    "Emily Hill - Developer, USA. Nickname: Em. Birthday: June 17, 1996.\n",
+    "Grace Baker - Creative Solutions, Australia.\n",
+    "James Clark - Analyst, USA. Phone: 321-888-4444. Nickname: Jim.\n",
+    "James Allen - Email: james.a@example.com, Phone: 234-567-8901. Nickname: Jim. Birthday: October 25, 1982.\n",
+    "Abigail Lee - UK. Phone: 654-321-0987. Nickname: Abby. Birthday: July 7, 1999.\n",
+    "Chris Anderson - Director at Innovatech, USA. Email: chris.a@example.com, Phone: 321-654-0987, Website: https://innovatech.com/chrisa, Nickname: CA. Birthday: May 30, 1979.\n",
+    "Aiden Edwards - UK. Email: aiden.e@example.com. Nickname: Aid.\n",
+    "Emily Davis - Analyst, UK. Nickname: Em. Birthday: March 25, 1992.\n",
+    "Henry Walker - Analyst, Canada. Email: henry.w@example.com, Website: https://example.com/henryw. Nickname: Hank. Birthday: February 18, 1991.\n",
+    "Isabella King - Australia. Email: isabella.k@example.com. Nickname: Bella.\n",
+    "Anthony Lewis - Email: anthony.l@example.com, Phone: 789-012-3456. Nickname: Tony.\n",
+    "Megan Thomas - Canada. Nickname: Meg.\n",
+    "Daniel Harris - Engineer. Nickname: Dan.\"\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 429 {\n",
+      "    \"error\": {\n",
+      "        \"message\": \"You exceeded your current quota, please check your plan and billing details. For more information on this error, read the docs: https://platform.openai.com/docs/guides/error-codes/api-errors.\",\n",
+      "        \"type\": \"insufficient_quota\",\n",
+      "        \"param\": null,\n",
+      "        \"code\": \"insufficient_quota\"\n",
+      "    }\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://api.openai.com/v1/embeddings'\n",
+    "\n",
+    "headers = {\n",
+    "    'Authorization': f'Bearer {api_key.api_token}',\n",
+    "    'Content-Type': 'application/json'\n",
+    "}\n",
+    "\n",
+    "data = {\n",
+    "    'input': 'Knowledge ',\n",
+    "    'model': 'text-embedding-3-small',\n",
+    "    'encoding_format': 'float'\n",
+    "}\n",
+    "\n",
+    "response3 = requests.post(url, headers=headers, data=json.dumps(data))\n",
+    "if response3.status_code == 200:\n",
+    "    embedding = response.json()['data'][0]['embedding']\n",
+    "    threshold = 0.004619906340651725\n",
+    "    count = sum(1 for value in embedding if value > threshold)\n",
+    "    print(f'Number of values greater than {threshold}:', count)\n",
+    "else:\n",
+    "    print('Error:', response3.status_code, response3.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'message': 'Your authentication token is not from a valid issuer.',\n",
+       "  'type': 'invalid_request_error',\n",
+       "  'param': None,\n",
+       "  'code': 'invalid_issuer'}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response3.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## the token expired"
+   ]
   }
  ],
  "metadata": {
