--- a/TDS_notes/data_dis.ipynb
+++ b/TDS_notes/data_dis.ipynb
@@ -16,7 +16,7 @@
     "    - generally paid.\n",
     "\n",
     "3. personal data\n",
-    "    - the data that specifically belongs to you, ex your call logs or your playlist. (though privacy is jsut a myth, but hypothtically sure!!)\n",
+    "    - the data that specifically belongs to you, ex your call logs or your playlist. (though privacy is just a myth, but hypothtically sure!!)\n",
     "\n",
     "    - personal logging as well.\n",
     "## good sources of public data set\n",
@@ -102,8 +102,7 @@
     "            - text\n",
     "            - binary\n",
     "\n",
-    "    - its possible to derived values form categorical data\n",
-    "    - these cols themselves don't have much operation to perform\n",
+    "    - its possible to derive values form categorical data as these cols themselves don't have much operation to perform\n",
     "\n",
     "2. Numerical \n",
     "\n",
