--- a/week_1_ga.ipynb
+++ b/week_1_ga.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +21,7 @@
        "(10000, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
        "np.float64(798070.0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
        "'Single Family'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
        "'Single Family'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
        "      <td>Bridgeport</td>\n",
        "      <td>112351.0</td>\n",
        "      <td>210000.0</td>\n",
-       "      <td>?</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Detached House</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
@@ -266,7 +267,7 @@
        "      <td>Bridgeport</td>\n",
        "      <td>153660.0</td>\n",
        "      <td>322000.0</td>\n",
-       "      <td>?</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Detached House</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -281,7 +282,7 @@
        "      <td>Bridgeport</td>\n",
        "      <td>109820.0</td>\n",
        "      <td>340000.0</td>\n",
-       "      <td>?</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Duplex</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
@@ -358,10 +359,10 @@
        "1        Two Family          Duplex          4              3       1241.0   \n",
        "2     Single Family  Detached House          3              2        910.0   \n",
        "3     Single Family  Detached House          3              1        971.0   \n",
-       "4                 ?  Detached House          3              2       1092.0   \n",
+       "4               NaN  Detached House          3              2       1092.0   \n",
        "...             ...             ...        ...            ...          ...   \n",
-       "9995              ?  Detached House          3              3        917.0   \n",
-       "9996              ?          Duplex          4              4       1416.0   \n",
+       "9995            NaN  Detached House          3              3        917.0   \n",
+       "9996            NaN          Duplex          4              4       1416.0   \n",
        "9997  Single Family  Detached House          3              1        964.0   \n",
        "9998  Single Family  Detached House          3              3       1014.0   \n",
        "9999  Single Family  Detached House          3              1        932.0   \n",
@@ -382,7 +383,7 @@
        "[10000 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +403,7 @@
        "(1712, 1712)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +432,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +470,7 @@
        "1050"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +492,7 @@
        "'Greenwich'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,13 +500,6 @@
    "source": [
     "df.groupby('Locality')['Sale Price'].mean().idxmax()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
