--- a/week_3_ga.ipynb
+++ b/week_3_ga.ipynb
@@ -15,10 +15,13 @@
     "from sklearn.feature_selection import VarianceThreshold\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import OrdinalEncoder, StandardScaler, OneHotEncoder\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
     "from sklearn.feature_selection import RFE\n",
+    "from sklearn.model_selection import train_test_split \n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.feature_selection import SequentialFeatureSelector"
+    "from sklearn.feature_selection import SequentialFeatureSelector\n",
+    "from sklearn.datasets import _california_housing\n",
+    "from sklearn.metrics import r2_score as r2"
    ]
   },
   {
@@ -27,12 +30,265 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oe=OrdinalEncoder()"
+    "data = _california_housing.fetch_california_housing(as_frame=True).frame\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler=StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=scaler.fit_transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(data, columns=_california_housing.fetch_california_housing()['feature_names'] + ['MedHouseVal'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MedInc         0\n",
+       "HouseAge       0\n",
+       "AveRooms       0\n",
+       "AveBedrms      0\n",
+       "Population     0\n",
+       "AveOccup       0\n",
+       "Latitude       0\n",
+       "Longitude      0\n",
+       "MedHouseVal    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=data.drop(columns='MedHouseVal')\n",
+    "y=data['MedHouseVal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2.129631\n",
+       "1        1.314156\n",
+       "2        1.258693\n",
+       "3        1.165100\n",
+       "4        1.172900\n",
+       "           ...   \n",
+       "20635   -1.115804\n",
+       "20636   -1.124470\n",
+       "20637   -0.992746\n",
+       "20638   -1.058608\n",
+       "20639   -1.017878\n",
+       "Name: MedHouseVal, Length: 20640, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test= train_test_split(X,y, test_size=0.2, shuffle=False, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6605140591531988"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LinearRegression().fit(X_train,y_train).score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.6095165611595197)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# rmse\n",
+    "np.sqrt(np.mean((LinearRegression().fit(X_train,y_train).predict(X_test)-y_test)**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6605140591531988\n",
+      "6.291945432593923\n",
+      "0.44790715537466763\n",
+      "0.3715104383277265\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred=LinearRegression().fit(X_train,y_train).predict(X_test)\n",
+    "# variance score\n",
+    "print(r2(y_test,y_pred))\n",
+    "# max error\n",
+    "print(np.max(np.abs(y_test-y_pred)))\n",
+    "# mean absolute error\n",
+    "print(np.mean(np.abs(y_test-y_pred)))\n",
+    "# mean squared error\n",
+    "print(np.mean((y_test-y_pred)**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00223974]\n",
+      "[ 0.72151161  0.10111188 -0.20649979  0.34948811 -0.01274921  0.00366353\n",
+      " -0.76932688 -0.74241455]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SGD regression\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "sgd=SGDRegressor()\n",
+    "sgd.fit(X_train,y_train)\n",
+    "y_pred=sgd.predict(X_test)\n",
+    "# bias term \n",
+    "print(sgd.intercept_)\n",
+    "# weights\n",
+    "print(sgd.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tunning the hyperparameters\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "sgd=SGDRegressor()\n",
+    "parameters = {'alpha':[0.0001,0.001,0.01,0.1,1,10,100], 'max_iter':[1000,10000,100000]}\n",
+    "clf = GridSearchCV(sgd, parameters)\n",
+    "clf.fit(X_train, y_train)\n",
+    "best_params=clf.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.00666056]\n",
+      "[ 0.76110342  0.09172147 -0.26142686  0.16161055 -0.02021651 -0.01344038\n",
+      " -0.63391529 -0.62056851]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sgd_best = SGDRegressor(alpha=best_params['alpha'], max_iter=best_params['max_iter'])\n",
+    "sgd_best.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred=sgd_best.predict(X_test)\n",
+    "# bias term\n",
+    "print(sgd_best.intercept_)\n",
+    "# weights\n",
+    "print(sgd_best.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oe=OrdinalEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +442,7 @@
        "[748 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +479,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +621,7 @@
        "17  2.0   NaN  3750.0  49.0  NEGATIVE    YES"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +713,7 @@
        "array([4, 5])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +734,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[43mselected_feature_indices\u001b[49m\u001b[43m]\u001b[49m\n",
+      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mX\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[43mselected_feature_indices\u001b[49m\u001b[43m]\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\vvagh\\miniconda3\\envs\\stenv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:5416\u001b[0m, in \u001b[0;36mIndex.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   5407\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m   5408\u001b[0m             warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m   5409\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing a boolean indexer with length 0 on an Index with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   5410\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlength greater than 0 is deprecated and will raise in a \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5413\u001b[0m                 stacklevel\u001b[38;5;241m=\u001b[39mfind_stack_level(),\n\u001b[0;32m   5414\u001b[0m             )\n\u001b[1;32m-> 5416\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mgetitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   5417\u001b[0m \u001b[38;5;66;03m# Because we ruled out integer above, we always get an arraylike here\u001b[39;00m\n\u001b[0;32m   5418\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
       "\u001b[1;31mIndexError\u001b[0m: index 5 is out of bounds for axis 0 with size 5"
      ]
