review of the code and pipeline(s)

--- a/MLP/NPPE1.ipynb
+++ b/MLP/NPPE1.ipynb
@@ -609,7 +609,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_10_prices = df['PRICE'].nlargest(10).mean()"
+    "top_10_prices = df['PRICE'].nlargest(10).mean()\n",
+    "# trick to get the mean of the top 10 prices directly."
    ]
   },
   {
@@ -836,7 +837,7 @@
     }
    ],
    "source": [
-    "len(df[(df['AGE'] <= 50) & (df['RIVERSIDE'].str.contains('YES'))])"
+    "len(df[(df['AGE'] <= 50) & (df['RIVERSIDE']=='YES')])"
    ]
   },
   {
@@ -855,15 +856,9 @@
    "outputs": [],
    "source": [
     "group = df.groupby('CATEGORY').size()\n",
+    "# nice way to directly see the count of each category.\n",
     "# max_category = group.idxmax()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -873,8 +868,8 @@
    "source": [
     "# Assuming 'PRICE' is the target variable\n",
     "df=df.drop('CATEGORY',axis=1)\n",
-    "X = df.drop('PRICE', axis=1)\n",
     "y = df['PRICE']\n",
+    "X = df.drop('PRICE', axis=1)\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)"
    ]
@@ -907,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +911,7 @@
        "(2800, 15)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,6 +924,10 @@
     "\n",
     "# df.drop('CATEGORY', axis=1, inplace=True)\n",
     "# Create individual pipelines for RM, AGE, and RIVERSIDE since they need both imputation and scaling/encoding\n",
+    "'''\n",
+    "the pipeline also simply works if there are same tranformations for multiple columns, then you simply define the pipeline and then write:\n",
+    "pipeline.fit_transform(df[['col1', 'col2', 'col3']])\n",
+    "'''\n",
     "rm_pipeline = Pipeline([\n",
     "    ('imputer', SimpleImputer(strategy='median')),\n",
     "    ('scaler', MinMaxScaler())\n",
@@ -963,12 +962,12 @@
     "\n",
     "# Apply the column transformer to the dataframe\n",
     "df_transformed = col_transform.fit_transform(x_train)\n",
-    "df_transformed.shape\n"
+    "df_transformed.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +976,7 @@
        "np.float64(0.37356184743463267)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1304,7 @@
        "[4000 rows x 15 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
