tried a few preprocessing steps at the end

--- a/MLP/weeek_10_ga.ipynb
+++ b/MLP/weeek_10_ga.ipynb
@@ -1002,6 +1002,171 @@
    "source": [
     "grid_search.best_params_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import DictVectorizer, FeatureHasher\n",
+    "data =[{'age': 4, 'height':96.0},\n",
+    "{'age': 1, 'height':73.9},\n",
+    "{'age': 3, 'height':88.9},\n",
+    "{'age': 2, 'height':81.6}]\n",
+    "dv = DictVectorizer(sparse=False)\n",
+    "dv1=DictVectorizer(sparse=True)\n",
+    "new_data=dv.fit_transform(data)\n",
+    "sparse=dv1.fit_transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 4. , 96. ],\n",
+       "        [ 1. , 73.9],\n",
+       "        [ 3. , 88.9],\n",
+       "        [ 2. , 81.6]]),\n",
+       " <Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+       " \twith 8 stored elements and shape (4, 2)>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data,sparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fh=FeatureHasher()\n",
+    "hashed=fh.fit_transform(data)\n",
+    "hashed.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fh1=FeatureHasher(input_type='dict')\n",
+    "hashed1=fh1.fit_transform(data)\n",
+    "hashed1.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  1. ,  2. ,  3. ,  4. , 73.9, 81.6, 88.9, 96. ])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.unique(hashed1.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  4., 96.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash = np.array(hashed1.toarray())\n",
+    "np.unique(hash[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 1048576)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The shape (4, 1048576) of the hash map returned by FeatureHasher means:\n",
+    "\n",
+    "4 rows: There are 4 data points in your input (data list). Each dictionary in the list represents one data point (or sample), so there are 4 rows.\n",
+    "\n",
+    "1048576 columns: The FeatureHasher maps the feature names and values into a space of size 2^20 (1,048,576). This large number of columns is because FeatureHasher uses a hashing mechanism to assign features to a fixed-size feature space. The default n_features is 2^20 (1,048,576), meaning it hashes all features into this many possible bins."
+   ]
   }
  ],
  "metadata": {
